--- a/style.css
+++ b/style.css
@@ -43,10 +43,17 @@ h1{
 }
 
 button{
-    width: 20%;
+    width: 50px;
     height: 30px;
     background-color: coral;
     border-radius: 12px;
     border: 3px solid white;
 }
 
+.done{
+    border-style: dotted;
+    font-style: italic;
+    text-decoration: line-through;
+    color: cornflowerblue;
+    border-color: cornsilk;
+}
