added a filter for completed and incompelete tasks, planned to refine the css but sadly that can wait, i found a bug related to the filter and after looking around, seems like i'll have to rework all of the code and make things save in a js object. also, i decided to add a dialogue box to make the todolist more flexible for input rather than ust a textarea.

--- a/style.css
+++ b/style.css
@@ -43,8 +43,7 @@ h1{
 }
 
 button{
-    width: 50px;
-    height: 30px;
+    padding: 5px 10px ;
     background-color: coral;
     border-radius: 12px;
     border: 3px solid white;
@@ -56,4 +55,12 @@ button{
     text-decoration: line-through;
     color: cornflowerblue;
     border-color: cornsilk;
+}
+
+.warning {
+    color: red;
+}
+
+.todo-item{
+    padding: 10px;
 }
